<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="32dp"
    android:background="@drawable/shape_card">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:orientation="vertical"
        app:flow_verticalAlign="center"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textMenuName"
            style="@style/CustomFont2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/menu_name"
            android:textColor="@color/colorDark"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textMenuType"
            style="@style/CustomFont1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/menu_type" />

        <TextView
            android:id="@+id/textMenuPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/menu_price" />

        <Button
            android:id="@+id/buttonAddToCard"
            style="@style/CustomFont1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_restaurant_type"
            android:clickable="false"
            android:paddingStart="4dp"
            android:paddingRight="4dp"
            android:text="Add To Pannier"
            android:textAllCaps="false"

            android:textColor="#FFFFFF" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="130dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="here menu image"
            android:scaleType="centerCrop"
            tools:ignore="HardcodedText"
            tools:srcCompat="@drawable/mcdonald" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>