<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="32dp"
    android:background="@drawable/shape_card"
    android:elevation="3dp">


    <TextView
        android:id="@+id/textName"
        style="@style/CustomFont2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="8dp"
        android:text="@string/restaurant_name"
        android:textSize="24sp"
        android:textColor="@color/colorDark"
        app:layout_constraintStart_toEndOf="@+id/imageRestaurant"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/imageRestaurant"
        android:layout_width="129dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:contentDescription="image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/mcdonald" />

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/rating_bar"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"

        android:layout_marginBottom="8dp"
        android:isIndicator="false"
        android:max="5"

        android:progressTint="@color/colorPrimary"
        android:rating="4.3"
        android:transformPivotX="0dp"
        android:transformPivotY="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageRestaurant"
        app:layout_constraintStart_toStartOf="@+id/imageRestaurant"
        app:layout_constraintTop_toBottomOf="@+id/imageRestaurant"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />


    <Button
        android:id="@+id/textType"
        style="@style/CustomFont1"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_restaurant_type"
        android:clickable="false"
        android:text="@string/restaurant_type"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"

        app:layout_constraintStart_toEndOf="@+id/imageRestaurant"
        app:layout_constraintTop_toBottomOf="@+id/textName"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <ImageView
        android:id="@+id/ic_map"
        android:layout_width="15dp"
        android:layout_height="18dp"
        android:layout_marginStart="21dp"
        app:layout_constraintBottom_toBottomOf="@+id/textAdresse"
        app:layout_constraintStart_toEndOf="@+id/imageRestaurant"
        app:layout_constraintTop_toTopOf="@+id/textAdresse"
        app:srcCompat="@drawable/ic_map" />

    <TextView
        android:id="@+id/textAdresse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/restaurant_location"
        style="@style/CustomFont1"
        app:layout_constraintStart_toEndOf="@+id/ic_map"
        app:layout_constraintTop_toBottomOf="@+id/textType" />

    <ImageView
        android:id="@+id/ic_fb"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/ic_ig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ic_ig"
        app:layout_constraintTop_toTopOf="@+id/ic_ig"
        app:srcCompat="@drawable/ic_fb" />

    <ImageView
        android:id="@+id/ic_ig"
        android:layout_width="18dp"
        android:layout_height="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/ic_mail"
        app:layout_constraintEnd_toStartOf="@+id/ic_fb"
        app:layout_constraintStart_toEndOf="@+id/ic_mail"
        app:layout_constraintTop_toTopOf="@+id/ic_mail"
        app:srcCompat="@drawable/ic_ig" />

    <ImageView
        android:id="@+id/ic_phone"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ic_mail"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/rating_bar"
        app:srcCompat="@drawable/ic_phoneb" />

    <ImageView
        android:id="@+id/ic_mail"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:contentDescription="image"
        app:layout_constraintBottom_toBottomOf="@+id/ic_phone"
        app:layout_constraintEnd_toStartOf="@+id/ic_ig"
        app:layout_constraintStart_toEndOf="@+id/ic_phone"
        app:layout_constraintTop_toTopOf="@+id/ic_phone"
        app:srcCompat="@drawable/ic_mail" />

</androidx.constraintlayout.widget.ConstraintLayout>